# ChangeLog for games-emulation/gnome-video-arcade
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*gnome-video-arcade-0.8.3 (18 Oct 2012)

  18 Oct 2012; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.8.3.ebuild:
  Bumped.

*gnome-video-arcade-0.8.0 (11 Dec 2011)

  11 Dec 2011; Piotr Szymaniak <szarpaj@grubelek.pl>
  -gnome-video-arcade-0.7.0.ebuild, -gnome-video-arcade-0.7.1.ebuild,
  +gnome-video-arcade-0.8.0.ebuild, metadata.xml:
  Version bump, updated ebuild.

  03 Jul 2011; Piotr Szymaniak <szarpaj@grubelek.pl>
  -gnome-video-arcade-0.6.8.ebuild, gnome-video-arcade-0.7.0.ebuild,
  gnome-video-arcade-0.7.1.ebuild:
  Updated depends.

  06 May 2011; Michał Ziąbkowski <mziab@o2.pl>
  gnome-video-arcade-0.6.8.ebuild, gnome-video-arcade-0.7.0.ebuild,
  gnome-video-arcade-0.7.1.ebuild:
  Fixed gtk+ dep.

  28 Jan 2011; Piotr Szymaniak <szarpaj@grubelek.pl>
  gnome-video-arcade-0.6.8.ebuild:
  Added missing IUSE flag.

*gnome-video-arcade-0.7.1 (08 Jun 2010)

  08 Jun 2010; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.7.1.ebuild:
  Bumped.

  15 Mar 2010; Michał Ziąbkowski <mziab@o2.pl>
  -gnome-video-arcade-0.6.5.ebuild, -gnome-video-arcade-0.6.7.ebuild:
  Removed cruft.

*gnome-video-arcade-0.7.0 (13 Mar 2010)

  13 Mar 2010; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.7.0.ebuild:
  Bumped with updated deps and gstreamer flag.

  27 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  gnome-video-arcade-0.6.7.ebuild:
  Fixing thinko.

*gnome-video-arcade-0.6.8 (27 Jan 2010)

  27 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  gnome-video-arcade-0.6.5.ebuild, gnome-video-arcade-0.6.7.ebuild,
  +gnome-video-arcade-0.6.8.ebuild:
  Bumped. Seems like the gnome flag is useless if gtk is new enough, so
  dropping that in all versions which ignore it. Also made the ebuild a bit
  nicer.

  27 Jun 2009; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.6.7.ebuild:
  Bumped. Updated homepage.
