@@ -1,2 +1,1 @@
-DIST gnome-video-arcade-0.8.0.tar.bz2 2057114 SHA256 fb3d6c581f80dff41ee048e9dfa958382c864d926bd802f4d6b4a55575622b66
 DIST gnome-video-arcade-0.8.3.tar.xz 1858628 SHA256 ee687c4c6ab7458ef77e175ede2c61538d73de81b8108ca9f3190126aaae522f SHA512 fb1b005b843e159b48f90e118d36e4311d934110b7f3f88153034449233275e401e2dee038e974ec874a91af0035872f4d0233e63ecbd014ed3b1c441ebeb862 WHIRLPOOL 5242a0d55786e9e73e373aa68c32e9f66279eb4a3e239764c112af88f9f334c4f1dacf4d18fd969bdf05087f802931c326e1effe7834790a8d5748b49f1cede9
